...
    }

    var label: LocalizedStringKey {
        switch self {
        case .inbox: return "Move to Inbox"
        case .notification: return "Mark as notification"
        case .promotion: return "Mark as promotion"
        }
    }

    var systemImage: String {
        switch self {
        case .inbox: return "tray"
...
